--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,13 +10,13 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
+<body class="bg-dark">
+  <div class="">
+    <header class="row bg-danger">
+      <h1 class="col-6">
         <a href="/">Tech Blog</a>
       </h1>
-      <nav>
+      <nav class="col-6">
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
         <a href="/profile">profile</a> |
@@ -26,7 +26,7 @@
         {{/if}}
       </nav>
     </header>
-    <main class="container container-fluid mt-5">
+    <main class="container container-fluid">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
